--- a/abstract.html
+++ b/abstract.html
@@ -1,6 +1,1 @@
-<div><span>This Authorea document template can be used to prepare documents according to a desired citation style and authoring guidelines. Abstracts are not always required, but most academic papers have one
-and writers should know how to produce a useful abstract. An abstract
-should be a very short, clear and concise summation of the entire paper.
-An abstract should provide enough of a preview that a typical reader will
-know whether or not they wish to read the paper. It should reveal both
-the purpose and conclusions of the paper.</span><br></div>
+<div><span>Data on gas leaks and responses has been recently released and studies have not yet been conducted using publicly accessible data. &nbsp;In New York City, there are currently eighty three leaks for every 100 miles of gas main installed <i><cite class="ltx_cite raw v1">\citep{forman_caution_2014}</cite> </i> and Manhattan gas lines leak three to five times more than other cities <cite class="ltx_cite raw v1">\citep{gallagher_natural_2015}</cite>. &nbsp;These authors have researched prediction of gas leaks to prioritize future inspections and develop a risk profile of built environment characteristics using public data.&nbsp;</div><div><img><span class="au-ref raw v1">\ref{302664}</span></div></span><br></div>
