--- a/figures/nn_zip_test_2015_outperform/caption.html
+++ b/figures/nn_zip_test_2015_outperform/caption.html
@@ -1,1 +1,1 @@
-<div data-label="166443">Multi-Layer Perceptron Neural&nbsp;</div>
+<div data-label="166443">Multi-Layer Perceptron Neural Net</div>
