--- a/figures/Actual_Zip/caption.html
+++ b/figures/Actual_Zip/caption.html
@@ -1,1 +1,1 @@
-<div data-label="673300">2015 gas leaks per building unit. Coloring displays the four&nbsp;</div>
+<div data-label="673300">2015 gas leaks per building unit. Coloring displays the four wuan</div>
