--- a/figures/Actual_Zip/caption.html
+++ b/figures/Actual_Zip/caption.html
@@ -1,1 +1,1 @@
-<div data-label="673300">2015 gas leaks per building unit. Coloring displays four quantiles with dark blue displaying the top quarter of gas leaks per building zip c</div>
+<div data-label="673300">2015 gas leaks per building unit. Coloring displays four quantiles with dark blue displaying the top quarter of gas leaks per building zip code</div>
