--- a/figures/Tract_Selection2/caption.html
+++ b/figures/Tract_Selection2/caption.html
@@ -1,1 +1,1 @@
-<div data-label="965803">This is a caption</div>
+<div data-label="965803">This figure shows 110th Street, Forest Hills, NY 11375. Black line notes the road segment, green displays census tracts not intersected by the 110th Street buffer, and yellow shapes represent the buffer around 110th Street and the 6 census tracts intersected.This is a caption</div>
