--- a/figures/Screen Shot 2017-03-30 at 6.43.02 PM/caption.html
+++ b/figures/Screen Shot 2017-03-30 at 6.43.02 PM/caption.html
@@ -1,1 +1,1 @@
-<div data-label="576363">Performance of models at the zip code</div>
+<div data-label="576363">Performance of models at the zip code&nbsp;</div>
