edited figures/Screen Shot 2017-03-30 at 6.43.17 PM/caption.html

--- a/figures/Screen Shot 2017-03-30 at 6.43.17 PM/caption.html
+++ b/figures/Screen Shot 2017-03-30 at 6.43.17 PM/caption.html
@@ -1,1 +1,1 @@
-<div data-label="508370">Performance at the This is a caption</div>
+<div data-label="508370">Performance at the census tract levelThis is a caption</div>
